# ray-tracing-course

./: .gitignore  README.md
week-2/: main.cpp
week-3/: crtvector.h  main.cpp
week-4-5/: CMakeLists.txt
week-4-5/app/: CMakeLists.txt  main.cpp
week-4-5/include/: color.h  crtray.h  crttriangle.h  crtvector.h
week-4-5/src/: crtray.cpp
week-4-5/test/: CMakeLists.txt  crtray_tests.cpp  crttriangle_tests.cpp  crtvector_tests.cpp
week-6/: CMakeLists.txt
week-6/app/: CMakeLists.txt  main.cpp
week-6/include/: crtcamera.h  crtmatrix.h  crttriangle.h
week-6/src/: crtcamera.cpp  crtmatrix.cpp  crtvector.cpp
week-6/test/: CMakeLists.txt  crtcamera_tests.cpp  crtmatrix_tests.cpp
week-7/: CMakeLists.txt
week-7/app/: CMakeLists.txt  main.cpp
week-7/include/: crtcamera.h  crtcolor.h  crtmesh.h  crtray.h  crtrenderer.h  crtscene.h  crtsettings.h  crttriangle.h  crtvector.h
week-7/scenes/: scene0.crtscene  scene1.crtscene  scene2.crtscene  scene3.crtscene  scene4.crtscene
week-7/src/: crtcamera.cpp  crtmesh.cpp  crtrenderer.cpp  crtscene.cpp  crtvector.cpp
week-8-9/: CMakeLists.txt
week-8-9/app/: CMakeLists.txt  main.cpp
week-8-9/include/: crtcamera.h  crtcanvas.h  crtcolor.h  crtintersectioninfo.h  crtlight.h  crtmaterial.h  crtmesh.h  crtpoint.h  crtrenderer.h  crtscene.h  crtsettings.h  crttriangle.h  crtvector.h
week-8-9/samples/week-8/: log.txt
week-8-9/samples/week-9/: log.txt
week-8-9/scenes/week-8/: scene0.crtscene  scene1.crtscene  scene2.crtscene  scene3.crtscene
week-8-9/scenes/week-9/: scene0.crtscene  scene1.crtscene  scene3.crtscene  scene4.crtscene  scene5.crtscene
week-8-9/src/: crtcamera.cpp  crtcanvas.cpp  crtmatrix.cpp  crtmesh.cpp  crtrenderer.cpp  crtscene.cpp  crtvector.cpp
